syntax = "proto3";

package whereip;

option go_package = "ops-backend/whereip/api/gen/v1;whereippb";

service WhereipService {
    rpc GetIp (GetIpRequest) returns (GetIpResponse);
    rpc GetIps (GetIpsRequest) returns (GetIpsResponse);
}

message GetIpRequest {
    string ip = 1;
}

message GetIpResponse {
    Ip ip = 1;
}

message Ip {}

message GetIpsRequest {
    repeated string ips = 1;
}

message GetIpsResponse {
    repeated Ip ips = 1;
}